# HelloCMakeProject

./: .gitignore  CMakeLists.txt  HelloConfig.h.in  README.md  main.cpp
MathFunctions/: CMakeLists.txt
src/: main.cpp
src/MathFunctions/: CMakeLists.txt  MathFunctions.cpp  MathFunctions.h  mysqrt.cpp  mysqrt.h
test/: hello_test_2.cpp
